<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalDataPage">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/p_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/pfullname"
                style="@style/editdetailsstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pfullname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/pemail"
                style="@style/editdetailsstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pemail"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/paddress"
                style="@style/editdetailsstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/paddress"
                android:inputType="text" />

            <EditText
                android:id="@+id/pcountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/background"
                android:enabled="false"
                android:hint="@string/pcountry"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="@string/country" />

            <Spinner
                android:id="@+id/pstate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:foreground="@drawable/background" />

            <Spinner
                android:id="@+id/pdistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:foreground="@drawable/background" />

            <Spinner
                android:id="@+id/pcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:foreground="@drawable/background" />

            <EditText
                android:id="@+id/ppincode"
                style="@style/editdetailsstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ppincode"
                android:inputType="number" />

            <Spinner
                android:id="@+id/poccupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:foreground="@drawable/background" />

            <EditText
                android:id="@+id/ppay"
                style="@style/editdetailsstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/ppay"
                android:inputType="number" />

            <EditText
                android:id="@+id/pmobile_number"
                android:background="@drawable/background"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:ems="10"
                android:hint="@string/pmobile_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/pwork_details"
                style="@style/editdetailsstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/pwork_details"
                android:inputType="textPersonName" />

        </LinearLayout>



    </ScrollView>

    <Button
        android:id="@+id/p_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/button_select_background"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>