<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/background"
            android:orientation="vertical">

            <Button
                android:id="@+id/select_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_select_background"
                android:text="@string/select_location"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/occupation_dropdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/occupation"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/states_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/district_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/city_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_select_background"
                android:text="@string/search"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">
<!--
            <Spinner
                android:id="@+id/additional_dropdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
-->
<!--            <Spinner-->
<!--                android:id="@+id/occupation_dropdown"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="2"-->
<!--                android:entries="@array/occupation" />-->

            <SearchView
                android:id="@+id/searchData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/background"
                android:clickable="true"
                android:focusable="true"
                android:iconifiedByDefault="false"
                android:queryHint="@string/search_query"
                android:visibility="gone" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </LinearLayout>



</FrameLayout>